cmake_minimum_required(VERSION 3.22)
project(algorithm_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm_cpp main.cpp task1.cpp task2.cpp task3.cpp task4.cpp task5.cpp task6.cpp task7.cpp task8.cpp task9.cpp task10.cpp task11.cpp task12.cpp task13.cpp task14.cpp task15.cpp task16.cpp task17.cpp task18.cpp task19.cpp)
